# LangflowSimpleAPI

./: main.py  pyproject.toml
static/: index.html
